2005-08-01  Paul Stevens <paul@nfg.nl>
	
	* README.ldap: added some more info.
	* imapcommands.c, imaputil.c, imaputil.h, dbmail-imapsession.c:
	closing some memory leakages.

2005-07-22  Aaron Stone <aaron@serendipity.cx>

	* pop3.c: added what appear to be missing initializations in the 
	variable PopSession_t session (closes #223).
	* server.c, server.h: added function ClearConfig which memsets
	the serverConfig_t config to 0 (closes #226).
	* lmtpd.c, imapd.c, pop3d.c: added calls to ClearConfig.
	* pgsql/dbpgsql.c: added some code to db_check_connection to throw
	a separate error if called before db_connect (related to #221).
	* pgsql/dbpgsql.c: added code to db_connect to check against
	UNICODE encodings prior to PostgreSQL 8.1 (closes: #218).

2005-07-16  Aaron Stone <aaron@serendipity.cx>

	* db.c: added DBPFX prefixes instead of dbmail_ in several places.
	* config.c: fixed faulty code for user-specified DBPFX value.

2005-07-14  Aaron Stone <aaron@serendipity.cx>

	* db.c: added the new tables into the DB_TABLENAMES field (closes #229).

2005-07-12  Aaron Stone <aaron@serendipity.cx>

	* pgsql/dbpgsql.c (db_query): clear the result set in the failure case
	(closes: #227).
	* lmtp.c (lmtp, LMTP_DATA): be sure to free the string returned from
	dbmail_message_to_string in a trace call, and free the message at the
	end of delivery as well as the failure case (closes: #227).

2005-06-23  Paul Stevens <paul@nfg.nl>

	* dbmail-message.c: escape strings during insertion (closes: #222).

2005-06-21  Paul Stevens <paul@nfg.nl>

	* db.c, pgsql/dbpgsql.c, server.c, mysql/dbmysql.c: minor cleanups. 
	
2005-06-20  Paul Stevens <paul@nfg.nl>

	* Makefile.am, dm_cidr.c, dm_cidr.h, misc.c, check_dbmail_server.c: support
	cidr notation in usermap sock_allow/sock_deny fields.
	* mime.c: minor cleanups.
	* misc.h, db.c, dm_cidr.c, check_dbmail_server.c, misc.c: use best match 
	on sock_allow in db_usermap_resolve.
	
2005-06-17  Paul Stevens <paul@nfg.nl>
